--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 absl-py==1.0.0
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613037499734/work
+argon2-cffi==20.1.0
 astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+async-generator==1.10
+attrs==21.4.0
+backcall==0.2.0
+bleach==4.1.0
 cachetools==5.0.0
 certifi==2021.10.8
-cffi @ file:///opt/conda/conda-bld/cffi_1642701102775/work
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.3
 cycler==0.11.0
-debugpy @ file:///tmp/build/80754af9/debugpy_1637091799509/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.4
 entrypoints==0.3
 Flask==2.0.3
@@ -27,71 +27,73 @@ googleapis-common-protos==1.54.0
 grpcio==1.43.0
 h5py==3.6.0
 idna==3.3
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1638542770237/work
-ipykernel @ file:///tmp/build/80754af9/ipykernel_1633534655931/work/dist/ipykernel-6.4.1-py3-none-any.whl
-ipython @ file:///tmp/build/80754af9/ipython_1643818145072/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
+importlib-metadata==4.8.2
+ipykernel==6.4.1
+ipython==7.31.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
 itsdangerous==2.0.1
-jedi @ file:///tmp/build/80754af9/jedi_1644297102865/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
+jedi==0.18.1
+Jinja2==3.0.2
 joblib==1.1.0
-jsonschema @ file:///Users/ktietz/demo/mc3/conda-bld/jsonschema_1630511932244/work
-jupyter @ file:///tmp/build/80754af9/jupyter_1607700846274/work
-jupyter-client @ file:///opt/conda/conda-bld/jupyter_client_1643638337975/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1636537028672/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.0
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 keras==2.8.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
 libclang==13.0.0
 Markdown==3.3.6
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1621523467000/work
+MarkupSafe==2.0.1
 matplotlib==3.5.1
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mistune @ file:///tmp/build/80754af9/mistune_1607364877025/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///opt/conda/conda-bld/nbconvert_1641309195684/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///tmp/build/80754af9/notebook_1637161762562/work
+matplotlib-inline==0.1.2
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.6
 numpy==1.22.2
 oauthlib==3.2.0
 opencv-python==4.5.5.62
 opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
+packaging==21.3
 pandas==1.4.1
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.0.1
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
+pip==21.2.4
+prometheus-client==0.13.1
 promise==2.3
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
+prompt-toolkit==3.0.20
 protobuf==3.19.4
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1636110951836/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.4
+pyrsistent==0.18.0
+python-dateutil==2.8.2
 pytz==2021.3
-pyzmq @ file:///tmp/build/80754af9/pyzmq_1638434985866/work
-qtconsole @ file:///opt/conda/conda-bld/qtconsole_1643819126524/work
-QtPy @ file:///opt/conda/conda-bld/qtpy_1643087291789/work
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==1.11.2
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
 scikit-learn==1.0.2
 scipy==1.8.0
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+Send2Trash==1.8.0
+setuptools==58.0.4
 sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six==1.16.0
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -100,21 +102,22 @@ tensorflow-datasets==4.5.2
 tensorflow-io-gcs-filesystem==0.24.0
 tensorflow-metadata==1.6.0
 termcolor==1.1.0
-terminado @ file:///tmp/build/80754af9/terminado_1644322582718/work
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+terminado==0.13.1
+testpath==0.5.0
 tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
 torch==1.10.2+cpu
 torchaudio==0.10.2+cpu
 torchvision==0.11.3+cpu
-tornado @ file:///tmp/build/80754af9/tornado_1606942317143/work
+tornado==6.1
 tqdm==4.62.3
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
+traitlets==5.1.1
 typing_extensions==4.1.1
 urllib3==1.26.8
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.3
-widgetsnbextension @ file:///tmp/build/80754af9/widgetsnbextension_1607531506226/work
+wheel==0.37.1
+widgetsnbextension==3.5.1
 wrapt==1.13.3
-zipp @ file:///opt/conda/conda-bld/zipp_1641824620731/work
+zipp==3.7.0
