Updated RDS endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,8 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,python,flask,jupyternotebooks,data
 .idea/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
