--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,258 @@
+absl-py==1.0.0
+altair==4.2.0
+appdirs==1.4.4
+apturl==0.5.2
+argcomplete==1.12.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astor==0.8.1
+astroid==2.3.3
+asttokens==2.0.5
+astunparse==1.6.3
+attrs==21.2.0
+autokey==0.95.10
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+base58==2.1.1
+bcrypt==3.2.0
+black==21.12b0
+bleach==4.1.0
+blinker==1.4
+blis==0.7.5
+Brlapi==0.7.0
+bz2file==0.98
+cachetools==5.0.0
+catalogue==2.0.6
+catboost==1.0.4
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.9
+ChatterBot==1.0.5
+chrome-gnome-shell==0.0.0
+ciseau==1.0.1
+click==7.1.2
+colorama==0.4.4
+command-not-found==0.3
+cryptography==36.0.0
+cupshelpers==1.0
+cycler==0.11.0
+cymem==2.0.6
+dbus-python==1.2.16
+debugpy==1.5.1
+decorator==5.1.0
+defer==1.0.6
+defusedxml==0.7.1
+distlib==0.3.4
+distro==1.6.0
+distro-info==1.0
+duplicity==0.8.12.0
+entrypoints==0.3
+epub==0.5.2
+epub-conversion==1.0.15
+executing==0.8.2
+fasteners==0.16.3
+filelock==3.4.2
 Flask==2.0.3
+flatbuffers==2.0
+fonttools==4.29.1
+future==0.18.2
+gast==0.5.3
+gitdb==4.0.9
+GitPython==3.1.26
+google-auth==2.6.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+graphviz==0.19.1
+greenlet==1.1.2
+grpcio==1.44.0
+gunicorn==20.1.0
+h5py==3.6.0
+halo==0.0.31
+hid==1.0.4
+hjson==3.0.2
+httplib2==0.20.2
+huggingface-hub==0.4.0
+idna==3.3
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+ipykernel==6.7.0
+ipython==8.0.0
+ipython_genutils==0.2.0
+ipywidgets==7.6.5
+isort==4.3.4
+itsdangerous==2.0.1
+jedi==0.18.1
+jeepney==0.7.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==4.2.1
+jupyter-client==7.1.1
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+keyring==23.4.0
+kiwisolver==1.3.2
+langcodes==3.3.0
+language-selector==0.1
+launchpadlib==1.10.15.1
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy-object-proxy==1.4.3
+libclang==13.0.0
+lockfile==0.12.2
+log-symbols==0.0.14
+logilab-common==1.4.3
+louis==3.12.0
+Mako==1.1.6
+Markdown==3.3.6
+MarkupSafe==2.0.1
+mathparse==0.1.2
 matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+milc==1.6.5
+mistune==0.8.4
+monotonic==1.6
+murmurhash==1.0.6
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.28
+nbclient==0.5.10
+nbconvert==6.4.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+netifaces==0.11.0
+nltk==3.6.5
+notebook==6.4.7
 numpy==1.21.5
+oauthlib==3.1.1
 opencv-python==4.5.5.62
+opt-einsum==3.3.0
+packaging==21.3
 pandas==1.3.5
+pandocfilters==1.5.0
+paramiko==2.8.1
+parso==0.8.3
+pathspec==0.9.0
+pathy==0.6.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+Pint==0.18
+plac==1.3.4
+platformdirs==2.4.1
+plotly==5.5.0
+preshed==3.0.6
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+protobuf==3.19.1
+psycopg2==2.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.1
+pyarrow==6.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.16.2
+pycparser==2.21
+pycups==1.9.73
+pydantic==1.8.2
+pydeck==0.7.1
+pydub==0.25.1
+pygame==2.1.2
+Pygments==2.10.0
+PyGObject==3.36.0
+pyinotify==0.9.6
+PyJWT==2.3.0
+pylint==2.4.4
+pymongo==4.0.1
+Pympler==1.0.1
+PyNaCl==1.4.0
+pyparsing==3.0.6
+PyPDF2==1.26.0
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyrsistent==0.18.0
+python-apt==2.0.0+ubuntu0.20.4.7
+python-dateutil==2.8.2
+python-debian==0.1.42
+python-xlib==0.23
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
+pyusb==1.2.1
+pyxdg==0.27
+PyYAML==6.0
+pyzmq==22.3.0
+qmk==1.0.0
+qmk-dotty-dict==1.3.0.post1
+regex==2021.11.10
+reportlab==3.6.3
+requests==2.26.0
+requests-oauthlib==1.3.1
+requests-unixsocket==0.2.0
+rsa==4.8
+sacremoses==0.0.47
+scipy==1.7.3
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+Send2Trash==1.8.0
+simplejson==3.17.6
+sip==6.5.0
+six==1.16.0
+smart-open==5.2.1
+smmap==5.0.0
+spacy==3.2.1
+spacy-legacy==3.0.8
+spacy-loggers==1.0.1
+SpeechRecognition==3.8.1
+spinners==0.0.24
+SQLAlchemy==1.4.28
+srsly==2.4.2
+stack-data==0.1.4
+streamlit==1.1.0
+systemd-python==234
+tenacity==8.0.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
+tf-estimator-nightly==2.8.0.dev2021122109
+thinc==8.0.13
+tokenizers==0.10.3
+toml==0.10.2
+tomli==1.2.3
+toolz==0.11.2
+torch==1.9.1+cpu
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+transformers==4.15.0
+typer==0.4.0
+typing_extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
+ubuntu-advantage-tools==27.6
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.26.7
+usb-creator==0.3.7
+validators==0.18.2
+virtualenv==20.13.1
+wadllib==1.3.6
+wasabi==0.9.0
+watchdog==2.1.6
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.2
+wrapt==1.11.2
+xarray==0.20.2
+xkit==0.0.0
+zipp==3.6.0
