--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.3
 numpy==1.21.5
-opencv_python==4.5.5.62
+opencv-python==4.2.0.34
 pandas==1.3.5
-tensorflow_cpu==2.8.0
+tensorflow-cpu==2.8.0
 gunicorn==20.1.0
