--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.3
 numpy==1.21.5
-opencv-python==4.3.0.38
+opencv-contrib-python-headless==4.5.5.62
 pandas==1.3.5
 tensorflow-cpu==2.8.0
 gunicorn==20.1.0
